// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message box displays the given message 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4F97FF",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "maxHeight": 40,
      "paddingLeft": 30,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "padding": 10,
      }
    }
  >
    Hey there, friend.
  </Text>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "padding": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`Message box has no background color when message prop is missing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4F97FF",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "maxHeight": 40,
        "paddingLeft": 30,
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "padding": 10,
      }
    }
  />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "padding": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`Message box has no button when onPress prop is missing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4F97FF",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "maxHeight": 40,
      "paddingLeft": 30,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "padding": 10,
      }
    }
  >
    Hey there, friend.
  </Text>
</View>
`;
